--- a/Micro.dproj
+++ b/Micro.dproj
@@ -123,6 +123,17 @@
             <Form>MainForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="ClientEntry.pas">
+            <Form>CleintEntry</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="MyQury.pas"/>
+        <DCCReference Include="shareFunction.pas"/>
+        <DCCReference Include="DataModule.pas">
+            <Form>DMMicro</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TDataModule</DesignClass>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
