--- a/Micro.dproj
+++ b/Micro.dproj
@@ -164,6 +164,9 @@
             <FormType>dfm</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
+        <DCCReference Include="GroupLoanRequestForm.pas">
+            <Form>GroupLoanRequest</Form>
+        </DCCReference>
         <None Include="ModelSupport_Micro\default.txaPackage"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
