--- a/Micro.dproj
+++ b/Micro.dproj
@@ -171,6 +171,11 @@
             <Form>frmDetails</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="ReportFrame.pas">
+            <Form>ReportFM</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
         <None Include="ModelSupport_Micro\default.txaPackage"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
